# py-enhanced-logging

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
_wf/: adjust_pdoc.py  versionize.py
docs/: enhanced_logging.html  index.html  search.js
src/enhanced_logging/: __init__.py
tests/: conftest.py  test_config.py  test_context.py  test_exceptions.py  test_helpers.py  test_output_human.py  test_output_json.py  test_speak.py
